# StrGraph

./: CMakeLists.txt  README.md
.ipynb_checkpoints/: test-checkpoint.ipynb
docs/: Tutorial1.ipynb  operators.md
docs/.ipynb_checkpoints/: Tutorial1-checkpoint.ipynb
drafts/catch2/: calculator.cpp  calculator.hpp  test_calculator.cpp
drafts/gtest/: math_operations.cpp  math_operations.h  test_math_operations.cpp  test_program
drafts/package/: 未命名.ipynb
drafts/pybind11/: CMakeLists.txt  bindings.cpp  example.cpp  example.h  nb01_test_the py_api.ipynb  node.cpp  test_node.py
drafts/pybind11/default_arg/: MyClass.cpp  nb01_test_defalt_arg.ipynb  test.py
drafts/stdString/: string  string.cpp
drafts/stdString/string.dSYM/Contents/Resources/DWARF/: string
src/cpp/: Edge  Node  NodeFactory.cpp  NodeFactory.h  Operation.cpp  Operation.h  OperationFactory.cpp  OperationFactory.h  OperationList.cpp  OperationList.h  OperationManager.cpp  OperationManager.h  OperationRegistry.cpp  OperationRegistry.h  README.md  bindings.cpp  comands.md  main  main.cpp  node.cpp  node.h  operationBase.h  setup.py  twoStringOperations.cpp  twoStringOperations.h
src/cpp/strgraph.egg-info/: PKG-INFO  SOURCES.txt
src/python/: pyproject.toml  setup.py
src/python/strgraph.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: command.md
tests/cpp/: TestConcatNode  TestConcatNode.cpp  TestNode  TestNode.cpp  TestNodeFactory  TestNodeFactory.cpp  TestOperation  TestOperation.cpp  TestOperationManager  TestOperationManager.cpp  nodeTest  nodeTest.cpp  test_operationConcat
(+1 files in other folders)
